--- a/app/api/Dockerfile
+++ b/app/api/Dockerfile
@@ -1,21 +1,21 @@
 # Etapa de compilación
 FROM node:20-alpine AS builder
-WORKDIR /api
+WORKDIR /usr/src/app
 
 COPY package*.json ./
 RUN npm ci
 
-COPY . .
+COPY . ./
 RUN npm run build
 
 # Etapa de producción
 FROM node:20-alpine AS production
-WORKDIR /api
+WORKDIR /usr/src/app
 
 COPY package*.json ./
 RUN npm ci --only=production
 
-COPY --from=builder /api/dist ./dist
+COPY --from=builder /usr/src/app/dist ./dist
 
 EXPOSE 3000
 CMD ["node", "dist/main.js"]
